joos1syntax/test/pos/SimpleExp0.java
public class SimpleExp0 {
  public SimpleExp0() {
    return true;
  }
}
