joos1syntax/test/neg/BadIf1.java
public class BadIf1 {
  public BadIf1() {
    if (
  }
}
